The EventProducer had a non-transient semaphore object, rendering it non-serializable. The lock has been replaced by a lock on the listeners object instead. The lock has been applied more consistently in the code to avoid ConcurrentModificationExceptions. All Dumper classes in DecoderDumper now use UTF-8 to dump the data, to ensure reproducibility of the code across platforms